<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AlbumOptionActivity">
        <include
            android:id="@+id/include"
            layout="@layout/action_bar_toolbar"></include>


        <TextView
            android:id="@+id/txt_01_ingresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/txt_05_opciones_album"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_purple"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />


        <Button
            android:id="@+id/btnOptAgregarAlbum"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            android:text="@string/txt_08_agregar_album"
            app:backgroundTint="@color/secondary_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_01_ingresa"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnOptLinkTrack"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/txt_09_asociar_cancion"
            app:backgroundTint="@color/secondary_purple"
            app:layout_constraintBottom_toTopOf="@+id/btnOptListado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOptAgregarAlbum"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnOptListado"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="156dp"
            android:text="@string/txt_10_lista_album"
            app:backgroundTint="@color/secondary_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="2dp" />>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>