<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar">
    </include>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_03_opciones_album"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_05_opciones_album"
        app:backgroundTint="@color/secondary_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:strokeColor="@color/primary_purple"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_04_artistas"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_gravity="center"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/txt_04_artistas"
        app:backgroundTint="@color/secondary_purple"
        app:layout_constraintBottom_toTopOf="@+id/btn_05_coleccionistas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_03_opciones_album"
        app:layout_constraintVertical_bias="0.449"
        app:strokeColor="@color/primary_purple"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_05_coleccionistas"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_gravity="center"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="216dp"
        android:text="@string/txt_02_coleccionista"
        app:backgroundTint="@color/secondary_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/primary_purple"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>