<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" >
        <include
            android:id="@+id/include"
            layout="@layout/action_bar_toolbar">
        </include>
        <TextView
            android:id="@+id/txt_01_ingresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/txt_01_ingresa"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_blue"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <ImageView
        android:id="@+id/img_01_home"
        android:layout_width="409dp"
        android:layout_height="380dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:baselineAlignBottom="false"
        app:layout_constraintBottom_toTopOf="@+id/btnMainInvitado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_01_ingresa"
        app:srcCompat="@drawable/img_01_home" />


        <Button
            android:id="@+id/btnMainColeccionista"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/txt_02_coleccionista"
            app:backgroundTint="@color/secondary_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primary_purple"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnMainInvitado"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_03_invitado"
            app:backgroundTint="@color/secondary_blue"
            app:layout_constraintBottom_toTopOf="@+id/btnMainColeccionista"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>